syntax = "proto3";   

package cloud.lianmi.im.friends;
option go_package = "github.com/lianmi/servers/api/proto/friends";

//2.4.5
//该接口处理好友删除相关操作-请求
message DeleteFriendReq{
   //好友账号
   //是否必填-是
   string account=1;
}
//2.4.5
//该接口处理好友删除相关操作-响应
//只包含状态码code，无内容载体
message DeleteFriendRsp{

}