syntax = "proto3";

package cloud.lianmi.im.friends;
option go_package = "github.com/lianmi/servers/api/proto/friends";

//
//操作类型枚举
enum OptType {
    //无效
    Fr_Undefined = 0;
    //发起好友验证
    Fr_ApplyFriend = 1;
    //对方同意加你为好友
    Fr_PassFriendApply = 2;
    //对方拒绝添加好友
    Fr_RejectFriendApply = 3;
}

//操作状态枚举
enum OpStatusType {
    //无效
    Ost_Undefined = 0;
    //添加好友成功
    Ost_ApplySucceed= 1;
    //等待对方同意加你为好友
    Ost_WaitConfirm = 2;
    //对方设置了拒绝任何人添加好友
    Ost_RejectFriendApply = 3;
}

//处理好友请求相关操作-请求
message FriendRequestReq {
    //对方用户ID
    //是否必填-是
    string username = 1;
    //备注
    //是否必填-否
    string ps = 2;
    //来源
    //是否必填-是
    //添加来源，需要添加“AddSource_Type_”前缀，后面自由拼接，如：Team、SHARE、SEARCH、QrCode等
    string source = 3;
    //操作类型
    //是否必填-是
    OptType type = 4;
}

//处理好友请求相关操作-响应
//只包含状态码code，无内容载体
message FriendRequestRsp {
    //对方用户ID
    //是否必填-是
    string username = 1;

    //工作流ID, 此ID会同步到其它端，一旦用对方同意 或拒绝，将会携带这个工作流ID
    //是否必填-是
    string workflowID = 2;

    //操作状态
    //是否必填-是
    OpStatusType status = 3;
}